# madus

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml
configs/prompts/: critic.txt  image_agent.txt  orchestator.txt  orchestrator.txt  summarizer.txt  table_agent.txt  text_agent.txt
core/: cache.py  config.py  databricks_sink.py  embeddings.py  models.py  policy.py  utils.py
docs/: n8n.md
scripts/: dev.sh
services/: Dockerfile
services/api/: app.py
services/api/routes/: analyze.py
services/extraction/: chunker.py  extraction.py  ocr.py  vision.py
services/reasoning/graph/: builder.py
services/reasoning/graph/nodes/: critic.py  extraction.py  image_agent.py  orchestrator.py  summarizer.py  table_agent.py  text_agent.py
services/reasoning/nodes/: critic.py  image_agent.py  orchestator.py  summarizer.py  text_agent.py
services/reasoning/tools/: retrieval.py
tests/: conftest.py
tests/integration/: test_integration.py
tests/unit/: test_extraction.py
