[project]
name = "madus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "databricks>=0.2",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "langchain-core>=1.3.0",
    "langchain-openai>=1.1.15",
    "langgraph>=1.1.8",
    "opencv-python-headless>=4.13.0.92",
    "paddleocr>=3.4.1",
    "paddlepaddle>=3.3.1",
    "pdfplumber>=0.11.9",
    "pydantic-settings>=2.14.0",
    "pymupdf>=1.27.2.2",
    "pytest>=9.0.3",
    "python-multipart>=0.0.26",
    "rank-bm25>=0.2.2",
    "redis>=7.4.0",
    "torch>=2.11.0",
    "transformers>=5.5.4",
    "uvicorn>=0.44.0",
]
